# anevar

./: .gitignore  CHANGELOG.md  COORDONARE-SESIUNI.md  build_slides.js  instructiuni-bootstrap-mac.md  instructiuni-instalare-aplicatii-mac.md  log.md  log_complet.md  plan-migrare-mac.md
evaluare-anevar/: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  _mutate.py  evaluare-anevar.spec  pyproject.toml  run.py  start.bat  version_info.txt
evaluare-anevar/.github/workflows/: ci.yml
evaluare-anevar/docs/: 00-SINTEZA-NOAPTE-2026-06-06.md  00-SINTEZA-NOAPTE-2026-06-07.md  00-SINTEZA-lansare-pentru-Adi.md  9-topicuri-decizie.md  AUTONOM-taskuri.md  BLOCAT-pe-Adi.md  GEV520-2025-crosscheck.md  LINDDUN-privacy-threat-model.md  SESIUNE-AUTONOMA-brief.md  SEV-2025-ce-putem-folosi.md  SEV-2025-cerinte-per-tip-imobil.md  SEV-2025-gap-implementare.md  SEV2025-GEV630-GEV500-crosscheck.md  SEV2025-general-SEV100-106-450-crosscheck.md  SLA-suport.md  audit-a11y-2026-06-08.md  audit-a11y-runda12-2026-06-11.md  audit-aml-pentru-jurist.md  audit-breaking-api-2026-06-08.md  audit-consolidat-2026-06-11.md  audit-differential-review-M2-2026-06-10.md  audit-gap-functionalitate-2026-06-11.md  audit-heuristic-ux-2026-06-11.md  audit-metodologie-3-2026-06-08.md  audit-nealiniat-consistenta-2026-06-11.md  audit-plan-2026-06-08.md  audit-report-completeness-2026-06-11.md  audit-robustete-runda12-2026-06-11.md  audit-robustete-runda14-2026-06-11.md  audit-robustete-runda15-2026-06-11.md  audit-robustete-runda16-2026-06-11.md  audit-securitate-2026-06-08.md  audit-securitate-2026-06-11.md  audit-securitate-cod-nou-2026-06-11.md  audit-skills-2026-06-07.md  audit-skilluri-noi-2026-06-10.md  audit-tehnic-2026-06-11.md  audit-triaj-centralizat.md  audit-ui-2026-06-11.md  audit-user-journey-2026-06-11.md  (+37 more)
evaluare-anevar/docs/adr/: ADR-001-decompozitie-routere-web.md  ADR-002-migrare-sqlite-foldere.md  ADR-003-model-lock-identitate.md  ADR-004-ai-gateway.md
evaluare-anevar/docs/analiza-anevar/: 00-SINTEZA.md  ROADMAP-IMPLEMENTARE.md  aml-forme-norme.md  aml-plan-ghid.md  articole-piata-1.md  articole-piata-2.md  crawl-anevar-ro.md  legal-norme-proceduri.md  standarde-calitate.md
evaluare-anevar/docs/audit-final/: 00-sinteza-audit-final.md  (+4 more)
evaluare-anevar/extensie-browser/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
evaluare-anevar/packaging/: CITESTE-MA.txt
evaluare-anevar/scripts/: _audit_screenshots.py  _audit_ui.py  _build_prezentare.js  _check_a11y.py  _check_calcul_eroare.py  _check_comparabile.py  _check_datepicker.py  _check_descoperire_tip.py  _check_dosar_beneficiar.py  _check_dosar_descopera.py  _check_grid.py  _check_grila_100x.py  _check_propagare.py  _check_xss.py  _e2e.py  _iconify_dosar.py  _make_icon.py  _md2pdf.py  _pw_smoke.py  _serve_test.py  _shot_grid.py  _usability_audit.py  build.py  build_localitati.py  export_chat.py  genereaza_breaza.py  genereaza_coordonate.py  genereaza_demo.py  lock.py  migreaza_sqlite_foldere.py  seed_dosare.py  serve_qa.py  sync_documente.py
evaluare-anevar/tests/: test_abordari.py  test_agricol.py  test_aml_constante.py  test_aml_documente.py  test_aml_indicatori.py  test_aml_liste.py  test_aml_models.py  test_aml_raportare.py  test_aml_risc.py  test_aml_serviciu.py  test_aml_store.py  test_anonymizer.py  test_apartament_model.py  test_assembler.py  test_assembler_profil.py  test_assembler_venit.py  test_audit.py  test_big.py  test_calitate.py  test_chirie.py  test_cod_postal.py  test_comparable_models.py  test_concurenta_race.py  test_config.py  test_cost.py  test_csrf.py  test_curs_bnr.py  test_dcf.py  test_dcf_flux.py  test_diacritice_export.py  test_discovery_config_ponderi.py  test_discovery_extractor.py  test_discovery_imoradar.py  test_discovery_metodologie.py  test_discovery_multi.py  test_discovery_orchestrator.py  test_discovery_ponderi.py  test_discovery_profiles.py  test_discovery_results.py  test_discovery_scoring.py  (+92 more)
(+290 files in other folders)
