[project]
name = "evaluare-anevar"
version = "0.1.0"
description = "Nucleu de calcul pentru evaluare imobiliara ANEVAR (casa + teren)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "python-docx>=1.1",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
