[project]
name = "evaluare-anevar"
version = "0.1.0"
description = "Nucleu de calcul pentru evaluare imobiliara ANEVAR (casa + teren)"
requires-python = ">=3.11"
# Limite superioare pe major: o actualizare majora poate strica impachetarea
# .exe (ex. Pillow 12 a inclus binarul _avif care corupea arhiva PKG). Versiunile
# exacte verificate sunt fixate in requirements.lock (pip install -r requirements.lock).
dependencies = [
    "pydantic>=2.6,<3",
    "python-docx>=1.1,<2",
    "anthropic>=0.40,<1",
    "fastapi>=0.110,<1",
    "uvicorn>=0.29,<1",
    "jinja2>=3.1,<4",
    "requests>=2.31,<3",
    "beautifulsoup4>=4.12,<5",
    "pypdf>=6.10.2,<7",   # pypdf (BSD, fost PyMuPDF AGPL) extragere text PDF; >=6.10.2 = fix 5 CVE-uri (audit D)
    "Pillow>=11,<13",          # tranzitiv via python-docx; fixat ca sa nu sara la 13
    # Tranzitive via requests, fixate ca prag de securitate (audit dependențe 2026-06-07):
    "urllib3>=2.7.0,<3",       # PYSEC-2026-141/142 (header-leak la redirect + DoS decompresie)
    "idna>=3.15",              # CVE-2026-45409 (DoS la idna.encode pe input lung)
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<10", "httpx>=0.27,<1", "ruff>=0.6,<1", "pytest-cov>=5,<7",
       "pytest-xdist>=3,<4",   # rulare paralela a suitei (pytest -n auto): ~131s -> ~61s
       "hypothesis>=6,<7"]     # teste property-based pe invariantii motorului (test_property_engine)

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "fuzz: teste de fuzz pe parsere de input neîncredut (Hypothesis); opt-in cu `-m fuzz`",
]

[tool.coverage.run]
source = ["evaluare"]
omit = [
    "*/__main__.py",   # punct de intrare (porneste uvicorn) - nu se testeaza unitar
    "*/vlm.py",        # extractor VLM optional (necesita model extern)
]

[tool.coverage.report]
# Prag de regresie: suita acopera ~94%; pastram o marja sub valoare (vezi docs/strategie-testare.md).
fail_under = 90
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = isort, B = bugbear, UP = pyupgrade,
# SIM = simplificari, C4 = comprehensions. Echivalent superset al pyflakes.
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
ignore = [
    "E501",    # lungimea liniei o gestioneaza formatatorul
    "SIM108",  # if/else explicit e mai clar decat ternarul pentru matematica de ajustari
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"scripts/genereaza_*.py" = ["E402"]  # import dupa sys.path.insert (rulare ca script)
